Refactor: Upgrade framework to Diamond Grade standards
- Make ConfigManager lock-free using ConcurrentHashMap
- Remove hardcoded base URLs in BasePage and BaseApiClient
- Make API RequestSpecification thread-safe
- Resolve deprecated capabilities in DriverFactory
- Fix unchecked cast in JsonUtils
- Remove hardcoded password from LoginTest
- Update documentation to reflect lock-free ConfigManager